{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 321,
  "lineage": "f1caa79f-622c-f7fd-fd98-411cc51d4dfa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ipNTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c76c24149facee9b",
            "association_id": "eipassoc-0c87943b31bedd2b2",
            "domain": "vpc",
            "id": "eipalloc-0c76c24149facee9b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0a8667c88605dd1f3",
            "private_dns": "ip-10-1-1-177.us-east-2.compute.internal",
            "private_ip": "10.1.1.177",
            "public_dns": "ec2-18-219-75-38.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.75.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0568773882d492fc8",
            "arn": "arn:aws:ec2:us-east-2:840021737375:instance/i-0cdd9f2f1c621dfd8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cdd9f2f1c621dfd8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "workshop_key_pair_ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d4c1ff44a9399d67",
            "private_dns": "ip-10-1-2-82.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07920ef369df0ebb8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f230f71e728dca0d",
            "tags": {
              "Name": "private_instance"
            },
            "tags_all": {
              "Name": "private_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08611d94d9dcf01e5"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds_joseph",
            "aws_db_subnet_group.subnet_group_joseph",
            "aws_key_pair.workshop_key_pair",
            "aws_kms_key.bd_key",
            "aws_secretsmanager_secret.secret_master_bd_final",
            "aws_secretsmanager_secret_version.access",
            "aws_security_group.joseph_rojas_private_security_group",
            "aws_security_group.joseph_rojas_public_security_group",
            "aws_security_group.joseph_rojas_rds_security_group",
            "aws_subnet.privatesubnet_db_1",
            "aws_subnet.privatesubnet_db_2",
            "aws_subnet.privatesubnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "tls_private_key.wkp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0568773882d492fc8",
            "arn": "arn:aws:ec2:us-east-2:840021737375:instance/i-0f0d919a42aff66ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0d919a42aff66ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "workshop_key_pair_ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ff1947e3300427bb",
            "private_dns": "ip-10-1-1-167.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.167",
            "public_ip": "3.145.84.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ac9c02014733ce3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bac4f85ed87eb378",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0383bcd3f550bf13c"
            ]
          },
          "dependencies": [
            "aws_key_pair.workshop_key_pair",
            "aws_security_group.joseph_rojas_public_security_group",
            "aws_subnet.publicsubnets",
            "aws_vpc.main_vpc",
            "tls_private_key.wkp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:internet-gateway/igw-0008ade801f1cb3f3",
            "id": "igw-0008ade801f1cb3f3",
            "owner_id": "840021737375",
            "tags": {
              "Name": "name_IGW"
            },
            "tags_all": {
              "Name": "name_IGW"
            },
            "vpc_id": "vpc-04dcb067640526997"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c76c24149facee9b",
            "connectivity_type": "public",
            "id": "nat-057f9425de065e023",
            "network_interface_id": "eni-0a8667c88605dd1f3",
            "private_ip": "10.1.1.177",
            "public_ip": "18.219.75.38",
            "subnet_id": "subnet-0bac4f85ed87eb378"
          },
          "dependencies": [
            "aws_eip.ipNTG",
            "aws_subnet.publicsubnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:route-table/rtb-05258efef78b839cd",
            "id": "rtb-05258efef78b839cd",
            "owner_id": "840021737375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057f9425de065e023",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "name_private_route_table"
            },
            "tags_all": {
              "Name": "name_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dcb067640526997"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ipNTG",
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:route-table/rtb-0f0774779e1ce890b",
            "id": "rtb-0f0774779e1ce890b",
            "owner_id": "840021737375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0008ade801f1cb3f3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "name_public_route_table"
            },
            "tags_all": {
              "Name": "name_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dcb067640526997"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cd7f7acc90a0f1d",
            "route_table_id": "rtb-05258efef78b839cd",
            "subnet_id": "subnet-0f230f71e728dca0d"
          },
          "dependencies": [
            "aws_eip.ipNTG",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09956ab3cecc04f84",
            "route_table_id": "rtb-0f0774779e1ce890b",
            "subnet_id": "subnet-0bac4f85ed87eb378"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.publicsubnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "joseph_rojas_private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:security-group/sg-08611d94d9dcf01e5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08611d94d9dcf01e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TCP rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0383bcd3f550bf13c"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_group_private_ec2",
            "name_prefix": "",
            "owner_id": "840021737375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_SG_ec2"
            },
            "tags_all": {
              "Name": "private_SG_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dcb067640526997"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.joseph_rojas_public_security_group",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "joseph_rojas_public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:security-group/sg-0383bcd3f550bf13c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0383bcd3f550bf13c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_group_public_ec2",
            "name_prefix": "",
            "owner_id": "840021737375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_SG_ec2"
            },
            "tags_all": {
              "Name": "public_SG_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dcb067640526997"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "joseph_rojas_rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:security-group/sg-09134ade3e2f2f0af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09134ade3e2f2f0af",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TCP rule",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08611d94d9dcf01e5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_group_access_rds",
            "name_prefix": "",
            "owner_id": "840021737375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_SG_rds"
            },
            "tags_all": {
              "Name": "private_SG_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dcb067640526997"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.joseph_rojas_private_security_group",
            "aws_security_group.joseph_rojas_public_security_group",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:subnet/subnet-0d227736badebb550",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d227736badebb550",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840021737375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joseph_rojas_rds_psn_1"
            },
            "tags_all": {
              "Name": "joseph_rojas_rds_psn_1"
            },
            "vpc_id": "vpc-04dcb067640526997"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:subnet/subnet-023c036aeaef3c84e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023c036aeaef3c84e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840021737375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "joseph_rojas_rds_psn_2"
            },
            "tags_all": {
              "Name": "joseph_rojas_rds_psn_2"
            },
            "vpc_id": "vpc-04dcb067640526997"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:subnet/subnet-0f230f71e728dca0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f230f71e728dca0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840021737375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "name_private_subnet_ec2"
            },
            "tags_all": {
              "Name": "name_private_subnet_ec2"
            },
            "vpc_id": "vpc-04dcb067640526997"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:subnet/subnet-0bac4f85ed87eb378",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bac4f85ed87eb378",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840021737375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "name_public_subntet_ec2"
            },
            "tags_all": {
              "Name": "name_public_subntet_ec2"
            },
            "vpc_id": "vpc-04dcb067640526997"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:840021737375:vpc/vpc-04dcb067640526997",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0cb86faf8dd1544c8",
            "default_route_table_id": "rtb-0bf0e53f38b3c0f80",
            "default_security_group_id": "sg-007a13ab7b69d6fa1",
            "dhcp_options_id": "dopt-0fca957340b438b6a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04dcb067640526997",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bf0e53f38b3c0f80",
            "owner_id": "840021737375"
          }
        }
      ]
    }
  ]
}